--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
