--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.6.3",
+    "otp-generator": "^2.0.1"
   }
 }
