--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.6.3",
-    "otp-generator": "^2.0.1"
+    "otp-generator": "^2.0.1",
+    "pg": "^8.7.1",
+    "sequelize": "^6.6.5"
   }
 }
