--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js",
+    "migrate": "node migrations/run.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
