--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,4 +4,5 @@ require('dotenv').config();
 
 module.exports = {
   'migrations-path': path.resolve('src/core/database', 'migrations'),
+  'seeders-path': path.resolve('src/core/database', 'seeders'),
 };
