updated image migration and issues

--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,20 @@
 {
     "development": {
-        "database": "rocket_delivery_demo",
+        "database": "rocket_delivery",
         "host": "127.0.0.1",
         "dialect": "postgres",
         "password": "admin",
         "username":"postgres"
     },
     "test": {
-        "database": "rocket_delivery_demo",
+        "database": "rocket_delivery",
         "host": "127.0.0.1",
         "dialect": "postgres",
         "password": "admin",
         "username":"postgres"
     },
     "production": {
-        "database": "rocket_delivery_demo",
+        "database": "rocket_delivery",
         "host": "127.0.0.1",
         "dialect": "postgres",
         "password": "admin",
