--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "sequelize": "^6.12.5",
     "sequelize-typescript": "^2.1.2",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
