--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "db:unseed": "npx sequelize-cli db:seed:undo:all"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
