--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^6.0.0-alpha.7",
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
@@ -41,13 +42,15 @@
     "class-validator": "^0.13.2",
     "firebase-admin": "^10.0.2",
     "moment": "^2.29.1",
+    "nodemailer": "^6.7.2",
+    "otp-generator": "^4.0.0",
     "pg": "^8.7.1",
     "razorpay": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sequelize": "^6.12.5",
-    "sequelize-typescript": "^2.1.2",
+    "sequelize-typescript": "^2.1.3",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.41",
     "uuid": "^8.3.2"
