--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "firebase-admin": "^10.0.2",
+    "html-pdf": "^3.0.1",
     "moment": "^2.29.1",
     "nodemailer": "^6.7.2",
     "otp-generator": "^4.0.0",
