--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-validator": "^0.13.2",
     "firebase-admin": "^10.0.2",
     "html-pdf": "^3.0.1",
+    "json2csv": "^5.0.7",
     "moment": "^2.29.1",
     "nodemailer": "^6.7.2",
     "otp-generator": "^4.0.0",
@@ -64,6 +65,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/json2csv": "^5.0.3",
     "@types/node": "^16.0.0",
     "@types/sequelize": "^4.28.11",
     "@types/supertest": "^2.0.11",
