--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start:prod": "node dist/main",
     "prestart:prod": "npm run build",
     "postinstall": "npm run prestart:prod",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
