node js engine setup
Signed-off-by: himanshuchauhan981 <himanshuchauhan981@gmail.com>

--- a/package.json
+++ b/package.json
@@ -101,5 +101,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.5.0"
   }
 }
