--- a/.sequelizerc
+++ b/.sequelizerc
@@ -5,4 +5,5 @@ require('dotenv').config();
 module.exports = {
   'migrations-path': path.resolve('src/core/database', 'migrations'),
   'seeders-path': path.resolve('src/core/database', 'seeders'),
+  'env': 'production',
 };
