--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "db:unmigrate": "npx sequelize-cli db:migrate:undo:all",
+    "db:unmigrate": "npx sequelize-cli db:migrate:undo",
     "db:seed": "npx sequelize-cli db:seed:all",
     "db:unseed": "npx sequelize-cli db:seed:undo:all"
   },
@@ -44,6 +44,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "firebase-admin": "^10.0.2",
+    "handlebars": "^4.7.7",
     "html-pdf": "^3.0.1",
     "json2csv": "^5.0.7",
     "moment": "^2.29.1",
@@ -70,6 +71,7 @@
     "@types/node": "^16.0.0",
     "@types/sequelize": "^4.28.11",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
