cities seeder issue fix
Signed-off-by: himanshuchauhan981 <himanshuchauhan981@gmail.com>

--- a/config/config.json
+++ b/config/config.json
@@ -18,6 +18,12 @@
         "host": "127.0.0.1",
         "dialect": "postgres",
         "password": "admin",
-        "username":"postgres"
+        "username":"postgres",
+        "dialectOptions": {
+            "ssl": {
+                "require": true,
+                "rejectUnauthorized": false
+            }
+        }
     }
 }
